--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "start": "strapi start",
     "strapi": "strapi",
     "upgrade": "npx @strapi/upgrade latest",
-    "upgrade:dry": "npx @strapi/upgrade latest --dry"
+    "upgrade:dry": "npx @strapi/upgrade latest --dry",
+    "test:websocket": "node test-websocket.js"
   },
   "dependencies": {
     "@strapi/plugin-cloud": "5.18.1",
@@ -21,6 +22,8 @@
     "@strapi/strapi": "5.18.1",
     "axios": "^1.10.0",
     "better-sqlite3": "^12.2.0",
+    "csv-parser": "^3.2.0",
+    "firebase-admin": "^13.4.0",
     "fs-extra": "^10.0.0",
     "mime-types": "^2.1.27",
     "pdfkit": "^0.17.1",
@@ -29,6 +32,8 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.0.0",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "styled-components": "^6.0.0"
   },
   "engines": {
